# fast-bernoulli

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md  bernoulli.py  setup.py
ci/: compile-and-test.sh
data/: benchmark-data-baseline.npy  benchmark-data-llvm.npy  benchmark-data-py.npy
doc/: benchmark.json
fast-bernoulli/: CMakeLists.txt  fast-bernoulli.h
fast-bernoulli/cc/: CMakeLists.txt  common.h  executor.cc  executor.h  sampler.cc  sampler.h
fast-bernoulli/cc/benchmark/: CMakeLists.txt  executor_bench.cc  sampler_bench.cc
fast-bernoulli/cc/unittest/: CMakeLists.txt  executor_jit_test.cc  executor_test.cc  sampler_test.cc
fast-bernoulli/python/: .gitignore  CMakeLists.txt  _fast_bernoulli.pyx  fast_bernoulli.pyx  setup.py  setup.py.in
notebooks/: benchmark-python.ipynb  benchmark-report.ipynb
src/: CMakeLists.txt  common.h  config.h.in  cpuid.cc  cpuid.h  executor.cc  executor.h  executor_bench.cc  executor_jit.cc  executor_jit_test.cc  executor_test.cc  executor_testdata.inc  fast-bernoulli.cc  fast-bernoulli.h  fast-bernoulli_bench.cc  fast-bernoulli_test.cc  main.cc  sampler.cc  sampler.h  sampler_bench.cc  sampler_test.cc
src/lib/: CMakeLists.txt  executor.cc  executor_jit.cc  executor_jit.h  sampler.h
src/lib/benchmark/: executor_bench.cc  sampler_bench.cc
src/lib/unittest/: executor_test.cc
src/python/: _fast_bernoulli.pyx
